# journald-format

./: CITATION.cff  Cargo.toml
src/: deku_helpers.rs  header.rs  impls.rs  lib.rs  main.rs  monotonic.rs  objects.rs  reader.rs  tables.rs  writer.rs
src/impls/: in_memory.rs  on_disk.rs  read_whole.rs
src/objects/: data.rs  entry.rs  entry_array.rs  field.rs  header.rs  tag.rs
src/reader/: file_read.rs
src/writer/: file_write.rs  options.rs
